add integration tests + fix docker compose files
